apply plugin: 'java'
apply plugin: 'application'
apply plugin: 'jacoco'

repositories {
    mavenCentral()
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(23)
    }
}

tasks.withType(JavaCompile).configureEach {
    options.compilerArgs += ['--enable-preview']
}

tasks.withType(JavaExec).configureEach {
    jvmArgs += '--enable-preview'
}

tasks.withType(Test).configureEach {
    jvmArgs += "--enable-preview"
}

dependencies {
    implementation project(':Triangle.AbstractMachine')
    implementation group: 'com.github.spullara.cli-parser', name: 'cli-parser', version: '1.1.5'
    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.11.3'
    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-params', version: '5.11.3'
    testRuntimeOnly group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.11.3'
}

test {
    useJUnitPlatform()
    finalizedBy jacocoTestReport
}

jacocoTestReport {
    dependsOn test
}

application {
    mainClass = 'triangle.Compiler'
}

// allow access to programs for unit tests
sourceSets.test.resources.srcDir file("$rootDir/programs")

test {
    finalizedBy jacocoTestReport // report is always generated after tests run
}
jacocoTestReport {
    dependsOn test // tests are required to run before generating the report
}
